<resources>
    <string name="app_name">Casino_19</string>
    <string name="local">https://40495930-9428-436b-838a-e08decd52cbd.mock.pstmn.io</string>
    <string name="remote">http://remotehost:8080</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="jsonrequest">JSONRequest</string>
    <string name="username">Username</string>
    <string name="submit">Sign Up</string>
    <string name="enter_email">Email or Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="submit_login">Log In</string>
    <string name="weclome_msg">Welcome to Casino-19</string>
    <string name="log_in">Login</string>
    <string name="create_account">Create Account</string>
    <string name="here_s_johnny">Here\'s Johnny</string>
    <string name="the_eagle_has_landed">The Eagle Has Landed!! Welcome to the Dashboard</string>
    <string name="signup">Sign Up</string>
    <string name="poker">Poker</string>
    <string name="blackjack">Blackjack</string>
    <string name="pitch">Pitch</string>
    <string name="euchre">Euchre</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="split">Split</string>
    <string name="stand">Stand</string>
    <string name="double_down">Double Down</string>
    <string name="hit">Hit</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_null">null</string>
    <string name="fold">fold</string>
    <string name="check">check</string>
    <string name="play_again">Play Again</string>
    <string name="quit">Quit</string>
    <string name="welcome_to_the_dashboard">Welcome to the Dashboard</string>

</resources>
