<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Dashboard">

    <Button
        android:id="@+id/btn0"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/poker"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:text="@string/blackjack"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn0" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:text="@string/pitch"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintStart_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:text="@string/euchre"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:text="@string/leaderboard"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="50dp"
        android:text="@string/settings"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />









</androidx.constraintlayout.widget.ConstraintLayout>