<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040303"
    tools:context=".Games.Poker.PokerActivity">

    <TextView
        android:id="@+id/poker_header"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:text="@string/poker"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:text="Poker" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:text="@string/_null"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <Button
        android:id="@+id/fold_btn"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:text="@string/fold"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/check_btn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:clickable="false"
        android:text="@string/check"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />


    <Button
        android:id="@+id/bet_5_btn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/_5"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_10_btn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/_10"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_25_btn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/_25"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_50_btn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/_50"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_100_btn"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:text="@string/_100"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/blackjack_terminal"
        android:layout_width="390dp"
        android:layout_height="450dp"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>