<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040303"
    tools:context=".Games.BlackJack.BlackJackActivity">


<!--    <TextView-->
<!--        android:id="@+id/terminal_display"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="51dp"-->
<!--        android:textColor="@android:color/holo_green_dark"-->
<!--        android:textSize="18sp"-->
<!--        app:fontFamily="monospace"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        tools:text="Blackjack" />-->




    <TextView
        android:id="@+id/blackjack_header"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:text="@string/blackjack"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Blackjack" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="77dp"
        android:layout_height="64dp"
        android:text="@string/_null"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/hit_btn"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:onClick="hit"
        android:text="@string/hit"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />

    <Button
        android:id="@+id/double_down_btn"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:onClick="doubleDown"
        android:text="@string/double_down"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/split_btn"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:onClick="split"
        android:clickable="false"
        android:text="@string/split"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/stand_btn"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:onClick="stand"
        android:text="@string/stand"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/bet_5_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:onClick="bet"
        android:text="@string/_5"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_10_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:onClick="bet"
        android:text="@string/_10"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_25_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:onClick="bet"
        android:text="@string/_25"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_50_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:onClick="bet"
        android:text="@string/_50"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/bet_100_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:onClick="bet"
        android:text="@string/_100"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/terminal_display"
        android:layout_width="397dp"
        android:layout_height="380dp"
        android:background="#111111"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="15sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

</androidx.constraintlayout.widget.ConstraintLayout>